# ogltest

./: .gitignore  CMakeLists.txt  README.md  config.h.in
resources/: vertex_shader.glsl
src/: ShaderProgram.cpp  ShaderProgram.h  logger.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  ogl4_1_renderer.cpp  ogl4_1_renderer.h  shader_loader.cpp  shader_loader.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
